--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp sass css vendor images js sass/components sass/pages sass/sections",
-    "init:files": "touch index.html styleguide.html sass/style.scss js/script.js",
+    "init:files": "touch index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
     "test:js": "eslint js/",
-    "test:scss": "stylelint src/sass/",
+    "test:scss": "stylelint sass/",
     "build": "npm-run-all build:* test",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
@@ -19,7 +19,7 @@
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build:* build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
-    "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
+    "watch:sassprefixer": "onchange \"sass/**/*.scss\" -- npm run build-dev"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.0",
     "stylelint": "^13.3.3",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.17.1"
   }
 }
